Toggle jump resolved, header fixed for mobile

--- a/src/componants/ProjectCard/index.scss
+++ b/src/componants/ProjectCard/index.scss
@@ -61,9 +61,8 @@
             align-items: flex-start;
             gap: 30px;
             img {
-                height: 55px;
+                height: 60px;
                 box-shadow: none;
-                object-fit: contain;
                 width: fit-content;
                 border-radius: 0;
             }
@@ -91,6 +90,7 @@
             display: flex;
             justify-content: center;
             gap: 10px;
+            color: #211349;
             cursor: pointer;
             &:hover {
                 background-color:#c7eded;
@@ -190,7 +190,7 @@
             }
             .icon-container{
                 img{
-                    height: 40px;
+                    height: 60px;
                 }
             }
         }
@@ -206,7 +206,7 @@
                 }
             }
             .icon-container{
-                gap: 10px;
+                gap: 20px;
             }
         }
     }
@@ -216,7 +216,7 @@
         .project-details{
             .icon-container{
                 img{
-                    height: 30px;
+                    height: 50px;
                     width: auto;
                 }
             }
