--- a/src/pages/OMF/index.scss
+++ b/src/pages/OMF/index.scss
@@ -387,6 +387,7 @@ $anim-delay: 650ms;
     @media screen and (max-width:500px) {
         gap: 30px;
         flex-direction: column;
+        align-items: center;
         .gif{
             width: 200px;
         }
